--- a/client/mobile.html
+++ b/client/mobile.html
@@ -85,7 +85,7 @@
     const audioContext = new (window.AudioContext || window.webkitAudioContext)({ sampleRate: 24000 });
     const audioStreamer = new AudioStreamer(audioContext);
     const mediaHandler = new MediaHandler();
-    const wsEndpoint = 'ws://localhost:8081';
+    const wsEndpoint = 'wss://bernard-websocket-1041714968645.us-central1.run.app';
     const api = new GeminiAPI(wsEndpoint);
 
     let isStarted = false;
